--- a/package.json
+++ b/package.json
@@ -13,11 +13,20 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.1.1",
+    "cryptojs": "^2.5.3",
+    "encrypt": "^0.0.1",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.4",
+    "ipfs-http-client": "^60.0.0",
     "next": "13.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@types/crypto-js": "^4.1.1",
+    "@types/cryptojs": "^3.1.30"
   }
 }
