--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-### FOR BEST PRACTICE, NEVER EVER FORGET ADD .ENV FILE TO GITIGNORE FOR SECURITY. I ADDED FOR THEM TO BE AN EXAMPLE, KEYS BELOW ARE NOT VALID
+### FOR BEST PRACTICE, NEVER EVER FORGET TO ADD .ENV FILE TO GITIGNORE FOR SECURITY. I ADDED FOR THEM TO BE AN EXAMPLE, KEYS BELOW ARE NOT VALID
 NEXT_PUBLIC_INFURA_ID= 2Jh04emTwZpDiOa09IJqUCBzFzj
 NEXT_PUBLIC_INFURA_KEY= 2e3aaee21bafa913be4afdd2f86bd7fa
